# CurrencyAssetsCalc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: asset_provider_base.py  crypto_market_providers.py  exchange_providers.py  yahoo_assets.py
core/: asset_memory.py  cache.py  calculator.py  currency_list.py  i18n.py  price_alerts.py  profiles.py  provider_base.py
gui/: main_window.py
providers/: ecb_provider.py  nbp_provider.py  placeholder_providers.py  registry.py  yahoo_provider.py
tests/: test_asset_memory.py  test_cache.py  test_chart_smoothing.py  test_crypto_search.py  test_price_alerts.py
